--- a/package.json
+++ b/package.json
@@ -6,25 +6,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "build:lib": "rimraf lib && run-s build:md",
-    "build:md": "rollup --config"
+    "preview": "vite preview"
   },
   "dependencies": {
+    "highlight.js": "^11.7.0",
     "markdown-it": "^13.0.1",
-    "npm-run-all": "^4.1.5",
-    "rimraf": "^4.4.0",
-    "rollup": "^3.20.0",
+    "markdown-it-emoji": "^2.0.2",
     "vue": "^3.2.47"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^24.0.1",
-    "@rollup/plugin-node-resolve": "^15.0.1",
     "@vitejs/plugin-vue": "^4.1.0",
+    "highlight.js": "^11.7.0",
     "markdown-it": "^13.0.1",
-    "npm-run-all": "^4.1.5",
-    "rimraf": "^4.4.0",
-    "rollup": "^3.20.0",
+    "markdown-it-emoji": "^2.0.2",
     "vite": "^4.2.0"
   }
 }
